@@ -60,7 +60,7 @@ define( function( require ) {
     var handleEvent = function( event ) {
       var y = thisNode.globalToLocalPoint( event.pointer.point ).y;
       var value = Util.linear( 0, size.height, range.max, range.min, y );
-      property.value = Util.toFixed( Util.clamp( value, range.min, range.max ), decimalPlaces );
+      property.value = parseFloat( Util.toFixed( Util.clamp( value, range.min, range.max ), decimalPlaces ) );
     };
     thisNode.addInputListener( new SimpleDragHandler(
       {
@@ -134,7 +134,7 @@ define( function( require ) {
       drag: function( event ) {
         var y = dragNode.globalToParentPoint( event.pointer.point ).y - clickYOffset;
         var value = Util.linear( positionRange.min, positionRange.max, valueRange.max, valueRange.min, y );
-        property.value = Util.toFixed( Util.clamp( value, valueRange.min, valueRange.max ), decimalPlaces );
+        property.value = parseFloat( Util.toFixed( Util.clamp( value, valueRange.min, valueRange.max ), decimalPlaces ) );
       }
     } );
   }
