@@ -1,3 +1,4 @@
+11/13/13 add parseFloat calls required by fix to dot.Util.toFixed, see dot#10
 10/29/13 joist#66, generalize handling of credits
 10/29/13 joist#69, convert to different requirejs style for main.js
 # 1.1.0-dev.1 10/23/13
